# pyflantic

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pyflantic/: checker.py
tests/: init_test.py
